# budget-app

./: .gitignore  README.md
backend/: docker-compose.yml  main.py  pyproject.toml
backend/app/: main.py  pyproject.toml
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  categories.py  expenses.py  incomes.py  user.py  users.py
backend/app/core/: db.py  security.py
backend/app/core/crud/: __init__.py  auth.py  category.py  expense.py  income.py  user.py
backend/app/core/models/: __init__.py  category.py  expense.py  income.py  notification.py  user.py
backend/core/models/: __init__.py  budget.py  expense.py  income.py
docs/: README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/components/: Bar.svelte  CategoriesForm.svelte  Charts.svelte  ExpensesForm.svelte  ExpensesIncomesForm.svelte  ExpensesIncomesList.svelte  IncomesForm.svelte  LoginForm.svelte  RegisterForm.svelte
frontend/src/lib/stores/: financialData.ts
frontend/src/routes/: +error.svelte  +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
