[project]
name = "app"
version = "0.1.0"
description = "REST API for budget-app"
authors = [
    {name = "Mikolaj Ewald",email = "pzx112068@student.poznan.merito.pl"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
